--- a/ci/pipeline-canary.yml
+++ b/ci/pipeline-canary.yml
@@ -11,14 +11,14 @@ resources:
   type: git
   source:
     branch: master
-    uri: git@github.com:myminseok/articulate.git
+    uri: git@github.com:myminseok/articulate-ci-demo.git
     private_key: {{github-private-key}}
   check_every: 10s # for demo
 - name: demo-out-repo
   type: git
   source:
     branch: master
-    uri: git@github.com:myminseok/articulate.git
+    uri: git@github.com:myminseok/articulate-ci-demo.git
     private_key: {{github-private-key}}
 - name: PCF
   type: cf
