--- a/ci/pipeline-canary.yml
+++ b/ci/pipeline-canary.yml
@@ -57,12 +57,12 @@ jobs:
   serial: true
   public: true
   plan:
-  - get: demo-repo
+  - get: demo-out-repo
     trigger: true  
     passed:
       - build-test
   - task: get-current-app-info
-    file: demo-repo/ci/tasks/current-app-get-info-canary.yml
+    file: demo-out-repo/ci/tasks/current-app-get-info-canary.yml
     params:
       PWS_APP_SUFFIX: {{pws-app-suffix}}
       PWS_API: {{pws-api}}
@@ -72,7 +72,7 @@ jobs:
       PWS_SPACE: {{pws-space}}
 
   - task: prepare-app-manifest-canary
-    file: demo-repo/ci/tasks/app-manifest-prep-canary.yml
+    file: demo-out-repo/ci/tasks/app-manifest-prep-canary.yml
     params:
       PWS_APP_SUFFIX: {{pws-app-suffix}}
   - put: PCF
@@ -84,12 +84,12 @@ jobs:
   serial: true
   public: true
   plan:
-  - get: demo-repo
+  - get: demo-out-repo
     trigger: false
     passed:
       - deploy-new-app
   - task: get-current-app-info-canary
-    file: demo-repo/ci/tasks/current-app-get-info-canary.yml
+    file: demo-out-repo/ci/tasks/current-app-get-info-canary.yml
     params:
       PWS_APP_SUFFIX: {{pws-app-suffix}}
       PWS_API: {{pws-api}}
@@ -100,7 +100,7 @@ jobs:
  
 
   - task: switch-app-routes
-    file: demo-repo/ci/tasks/update-routes-canary.yml
+    file: demo-out-repo/ci/tasks/update-routes-canary.yml
     params:
       PWS_APP_SUFFIX: {{pws-app-suffix}}
       PWS_APP_DOMAIN: {{pws-app-domain}}
