--- a/ci/tasks/update-routes-canary.yml
+++ b/ci/tasks/update-routes-canary.yml
@@ -9,8 +9,8 @@ image_resource:
 
 
 inputs:
-- name: demo-repo
+- name: demo-out-repo
 - name: current-app-info
 
 run:
-  path: demo-repo/ci/tasks/update-routes-canary
+  path: demo-out-repo/ci/tasks/update-routes-canary
