--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -13,12 +13,16 @@ resources:
     uri: git@github.com:myminseok/articulate-ci-demo.git
     private_key: {{github-private-key}}
   check_every: 10s # for demo
+
 - name: demo-out-repo
   type: git
   source:
     branch: master
     uri: git@github.com:myminseok/articulate-ci-demo.git
     private_key: {{github-private-key}}
+    disable_ci_skip: true
+  check_every: 10s # for demo
+
 - name: PCF
   type: cf
   source:
@@ -28,10 +32,12 @@ resources:
     password: {{deploy-password}}
     skip_cert_check: true
     space: {{pws-space}}
+
 - name: CVE-check
   type: docker-image
   source:
     repository: java
+    
 
 jobs:
 - name: build-test
