--- a/ci/pipeline-bluegreen.yml
+++ b/ci/pipeline-bluegreen.yml
@@ -7,6 +7,15 @@ groups:
   - unmap-route
 
 resources:
+
+- name: source-repo
+  type: git
+  source:
+    branch: master
+    uri: git@github.com:myminseok/articulate.git
+    private_key: {{github-private-key}}
+  check_every: 10s # for demo
+
 - name: demo-repo
   type: git
   source:
@@ -44,6 +53,8 @@ jobs:
   serial: true
   public: true
   plan:
+  - get: source-repo
+    trigger: true
   - get: demo-repo
     trigger: true
   - get: demo-out-repo
