--- a/ci/pipeline-bluegreen.yml
+++ b/ci/pipeline-bluegreen.yml
@@ -8,13 +8,13 @@ groups:
 
 resources:
 
-# - name: source-repo
-#   type: git
-#   source:
-#     branch: master
-#     uri: git@github.com:myminseok/articulate.git
-#     private_key: {{github-private-key}}
-#   check_every: 10s # for demo
+- name: source-repo
+  type: git
+  source:
+    branch: master
+    uri: git@github.com:myminseok/articulate.git
+    private_key: {{github-private-key}}
+  check_every: 10s # for demo
 
 - name: demo-repo
   type: git
@@ -53,10 +53,10 @@ jobs:
   serial: true
   public: true
   plan:
-  # - get: source-repo
-  #   trigger: true
-  - get: demo-repo
+  - get: source-repo
     trigger: true
+  - get: demo-repo
+    trigger: false
   - get: demo-out-repo
     trigger: false
   - get: CVE-check
