--- a/ci/pipeline-bluegreen.yml
+++ b/ci/pipeline-bluegreen.yml
@@ -12,7 +12,8 @@ resources:
   type: git
   source:
     branch: master
-    uri: git@github.com:myminseok/articulate.git
+#    uri: git@github.com:myminseok/articulate.git
+    uri: {{git-source-repo-uri}}
     private_key: {{github-private-key}}
   check_every: 10s # for demo
 
