--- a/ci/tasks/build-test.yml
+++ b/ci/tasks/build-test.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: myminseok/java8_git_mvn
-    tag: v1
+    tag: v2 # spring 1.5.4
 
 inputs:
 - name: source-repo
