--- a/ci/pipeline-canary.yml
+++ b/ci/pipeline-canary.yml
@@ -80,6 +80,7 @@ jobs:
     file: build-out-repo/ci/tasks/app-manifest-prep-canary.yml
     params:
       PWS_APP_SUFFIX: {{pws-app-suffix}}
+      PWS_APP_HOSTNAME: {{pws-app-hostname}}
   - put: PCF
     params:
       manifest: output/manifest.yml
