--- a/ci-offline/tasks/app-manifest-prep.yml
+++ b/ci-offline/tasks/app-manifest-prep.yml
@@ -4,9 +4,9 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: localhost:5000/pivotalservices/docker-concourse-cf-tools
+    repository: localdockerrepo.pcfdemo.net:5000/pivotalservices/docker-concourse-cf-tools
     tag: "latest"
-    insecure_registries: [ "localhost:5000" ]
+    insecure_registries: [ "localdockerrepo.pcfdemo.net:5000" ]
      
     
 
