--- a/ci-offline/docker-compose.yml
+++ b/ci-offline/docker-compose.yml
@@ -3,6 +3,7 @@ version: '2'
 services:
   concourse-db:
     image: postgres
+    restart: always  
     environment:
     - POSTGRES_DB=concourse
     - POSTGRES_PASSWORD=concourse_pass
@@ -11,6 +12,7 @@ services:
 
   concourse:
     image: concourse/concourse
+    restart: always  
     command: quickstart
     privileged: true
     depends_on: [concourse-db]
