--- a/ci/tasks/cachetest-task1.yml
+++ b/ci/tasks/cachetest-task1.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: maven:3.6.3-jdk-8
+    repository: maven
+    tag: 3.6.3-jdk-8
 
 inputs:
 - name: demo-repo
